--- a/test_setting.ini
+++ b/test_setting.ini
@@ -1,7 +1,7 @@
 timezone = 9
 
-voicechannel = 
-textchannel = 
+voicechannel = 789568413130555442
+textchannel = 789576661234089984
 ladderchannel = 
 jungsanchannel = 
 killchannel = 
