--- a/boss.ini
+++ b/boss.ini
@@ -89,7 +89,7 @@ nogencheck = 0
 before_alert_ment = 입니다
 alert_ment = 시간입니다. 대박 터져랏!!
 
-bossname = 2채움카르둔
+bossname = 2채플란타리온
 gentime = 00:30
 nogencheck = 0
 before_alert_ment = 입니다
@@ -101,7 +101,7 @@ nogencheck = 0
 before_alert_ment = 입니다
 alert_ment = 시간입니다. 대박 터져랏!!
 
-bossname = 2채움카르둔
+bossname = 2채크카툼
 gentime = 00:30
 nogencheck = 0
 before_alert_ment = 입니다
