--- a/boss.ini
+++ b/boss.ini
@@ -11,7 +11,7 @@ nogencheck = 0
 before_alert_ment = 입니다
 alert_ment = 시간입니다. 대박 터져랏!!
 
-bossname = 1테레호그
+bossname = 1채테레호그
 gentime = 00:30
 nogencheck = 0
 before_alert_ment = 입니다
